solved bug footer go behind scrollbar

--- a/src/css/footer/footer.css
+++ b/src/css/footer/footer.css
@@ -8,7 +8,7 @@
     font-size: 0.8rem;
     display: grid;
     grid-auto-flow: column;
-    width: 100vw;
+    width: 100%;
 }
 
 #footer-made a {
